<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linkedin"
        android:textSize="40sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/sgn_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:background="@drawable/box"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:hint="@string/uname"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/box"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:textAlignment="center"
            android:textColorHint="#8D6E63" />
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:background="@drawable/box"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/box"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#8D6E63" />

        <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:background="@drawable/box" />

        <EditText
            android:id="@+id/short_bio"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="textMultiLine"
            android:background="@drawable/box"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:hint="@string/short_bio"/>

        <EditText
            android:id="@+id/skills"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/box"
            android:hint="Skills"
            android:inputType="textMultiLine"
            android:textAlignment="center"
            android:textColorHint="#8D6E63" />

        <Button
            android:id="@+id/profile_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/box"
            android:text="@string/prof_pic"
            android:textSize="25sp" />

        <ViewStub
            android:id="@+id/profile_pic_stub"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:inflatedId="@+id/profile_pic_inflated"
            android:layout="@layout/layout_image"/>

        <include layout="@layout/layout_image" />

        <EditText
            android:id="@+id/phone_no"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="phone"
            android:background="@drawable/box"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:hint="@string/phone_number"/>


        <Button
        android:id="@+id/sgn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:background="@drawable/box"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:textSize="25sp"
            android:textStyle="italic"
            android:textAlignment="center"/>

    </LinearLayout>

    </ScrollView>

</LinearLayout>