<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity4">

    <androidx.cardview.widget.CardView
        android:id="@+id/contact_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/contact_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_email"
                android:textSize="24sp"
                android:textStyle="italic"
                android:textAlignment="center"
                />
            <EditText
                android:id="@+id/contact_details"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:inputType="textMultiLine"
                android:hint="@string/write_here"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/box"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/contact_header"
                android:autofillHints="no" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:background="@drawable/box"
                android:layout_below="@+id/contact_details"
                android:layout_marginStart="50dp"/>

            <Button
                android:id="@+id/btn_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:background="@drawable/box"
                android:layout_below="@+id/contact_details"
                android:layout_toEndOf="@+id/btn_send"
                android:layout_marginStart="40dp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/contact_footer"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@drawable/arrow_left"/>

</LinearLayout>